--- a/index.html
+++ b/index.html
@@ -41,10 +41,8 @@
   <script>
     // List of images (just the filename without the leading slash)
     const images = [
-      "cat.png",
-      "dog.jpg",
-      "funny.gif",
-      "example.png"
+      "swctw.png",
+      "banan.jpeg",
     ];
 
     const container = document.getElementById("buttons-container");
