--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 <body>
   <h1>Image Gallery</h1>
   <div class="button-container">
-    <button onclick="openImage('./banan.jpeg')">BANAN</button>
-    <button onclick="openImage('./swctw.png')">something wicked comes this way</button>
+    <button onclick="openImage('images/banan.jpeg')">BANAN</button>
+    <button onclick="openImage('images/swctw.png')">something wicked comes this way</button>
     <!-- Add more buttons as needed -->
   </div>
 
